--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -806,5 +806,23 @@
     "sameNameConflict": "अपडेट करने के लिए कृपया नाम बदलें",
     "categoryEnabled": "कार्रवाई आइटम श्रेणी सक्षम",
     "categoryDisabled": "क्रिया आइटम श्रेणी अक्षम की गई"
+  },
+  "organizationVenues": {
+    "venueTitle": "स्थान",
+    "addVenue": "स्थान जोड़ें",
+    "venueDetails": "स्थान विवरण",
+    "venueName": "स्थल का नाम",
+    "enterVenueName": "स्थल का नाम दर्ज करें",
+    "description": "स्थल का विवरण",
+    "enterVenueDesc": "स्थल विवरण दर्ज करें",
+    "capacity": "क्षमता",
+    "enterVenueCapacity": "स्थल की क्षमता दर्ज करें",
+    "image": "स्थल छवि",
+    "uploadVenueImage": "स्थान छवि अपलोड करें",
+    "createVenue": "क्रिएट वेन्यू",
+    "venueAdded": "स्थान सफलतापूर्वक जोड़ा गया",
+    "update": "स्थान विवरण अद्यतन करें",
+    "editVenue": "अपडेट स्थान",
+    "venueUpdated": "स्थल विवरण सफलतापूर्वक अद्यतन किया गया"
   }
 }
