Added support to add members in an organization (#1719)
* Add support to add member to an org

* Implemented logic to register and add member to the organization

* improve code coverage

* removed unwanted code

* fix: failing tests

* implemented separate component for add member functionality

* fix: formatting issues

--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -259,7 +259,23 @@
     "searchLastName": "输入姓氏",
     "people": "人",
     "sort": "按角色搜索",
-    "actions": "操作"
+    "actions": "操作",
+    "existingUser": "现有用户",
+    "newUser": "新用户",
+    "firstName": "名",
+    "enterFirstName": "輸入您的名字",
+    "lastName": "姓",
+    "enterLastName": "輸入您的姓氏",
+    "emailAddress": "電子郵件地址",
+    "enterEmail": "輸入你的電子郵箱地址",
+    "password": "密碼",
+    "enterPassword": "輸入您的密碼",
+    "confirmPassword": "確認密碼",
+    "enterConfirmPassword": "輸入您的密碼以確認",
+    "organization": "組織",
+    "create": "創造",
+    "cancel": "取消",
+    "invalidDetailsMessage": "請輸入有效的詳細信息。"
   },
   "userListCard": {
     "joined": "加入",
