refactor: updated Graphql query and mutation
- Updated UPDATE_USER_MUTATION to include all the additional fields: gender, email, phone number,
  birth date, education grade, employment status, marital status, address, and country.
- Updated CHECK_AUTH mutation with all the required fields.
- Updated frontend code to utilize these mutations and queries
- Covered the code with tests.

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -758,6 +758,26 @@
     "married": "Marié(e)",
     "divorced": "Divorcé(e)",
     "widowed": "Veuf(ve)",
+    "engaged": "Fiancé(e)",
+    "seperated": "Séparé(e)",
+    "grade1": "CP (Cours Préparatoire)",
+    "grade2": "CE1 (Cours Élémentaire 1ère année)",
+    "grade3": "CE2 (Cours Élémentaire 2ème année)",
+    "grade4": "CM1 (Cours Moyen 1ère année)",
+    "grade5": "CM2 (Cours Moyen 2ème année)",
+    "grade6": "6ème",
+    "grade7": "5ème",
+    "grade8": "4ème",
+    "grade9": "3ème",
+    "grade10": "Seconde",
+    "grade11": "Première",
+    "grade12": "Terminale",
+    "graduate": "Diplômé(e)",
+    "kg": "Maternelle",
+    "preKg": "Toute Petite Section",
+    "noGrade": "Pas de niveau",
+    "fullTime": "Temps plein",
+    "partTime": "Temps partiel",
     "enterState": "Entrer la ville ou l'état",
     "selectCountry": "Sélectionner un pays",
     "joined": "Rejoint"
