--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -761,6 +761,26 @@
     "married": "विवाहित",
     "divorced": "तलाकशुदा",
     "widowed": "विधवा",
+    "engaged": "सगाईशुदा",
+    "seperated": "अलग",
+    "grade1": "कक्षा 1",
+    "grade2": "कक्षा 2",
+    "grade3": "कक्षा 3",
+    "grade4": "कक्षा 4",
+    "grade5": "कक्षा 5",
+    "grade6": "कक्षा 6",
+    "grade7": "कक्षा 7",
+    "grade8": "कक्षा 8",
+    "grade9": "कक्षा 9",
+    "grade10": "कक्षा 10",
+    "grade11": "कक्षा 11",
+    "grade12": "कक्षा 12 ",
+    "graduate": "स्नातक",
+    "kg": "केजी",
+    "preKg": "प्री-केजी",
+    "noGrade": "कोई ग्रेड नहीं",
+    "fullTime": "पूर्णकालिक",
+    "partTime": "अंशकालिक",
     "enterState": "शहर या राज्य दर्ज करें",
     "selectCountry": "देश चुनें",
     "joined": "शामिल हुआ"
