--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -761,6 +761,26 @@
     "married": "已婚",
     "divorced": "离婚",
     "widowed": "鰥寡",
+    "engaged": "已订婚 (Yǐ dìng hūn)",
+    "seperated": "分居 (Fēn jū)",
+    "grade1": "一年级 (Yī nián jí)",
+    "grade2": "二年级 (Èr nián jí)",
+    "grade3": "三年级 (Sān nián jí)",
+    "grade4": "四年级 (Sì nián jí)",
+    "grade5": "五年级 (Wǔ nián jí)",
+    "grade6": "六年级 (Liù nián jí)",
+    "grade7": "七年级 (Qī nián jí)",
+    "grade8": "八年级 (Bā nián jí)",
+    "grade9": "九年级 (Jiǔ nián jí)",
+    "grade10": "十年级 (Shí nián jí)",
+    "grade11": "十一年级 (Shíyī nián jí)",
+    "grade12": "十二年级 (Shíèr nián jí)",
+    "graduate": "毕业生 (Bìyè shēng)",
+    "kg": "幼儿园 (Yóu ér yuán)",
+    "preKg": "学前班 (Xuéqián bān)",
+    "noGrade": "无等级 (Wú děng jí)",
+    "fullTime": "全职 (Quánzhí)",
+    "partTime": "兼职 (Jiānzhí)",
     "enterState": "输入城市或州",
     "selectCountry": "选择国家/地区",
     "joined": "加入"
