--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -762,6 +762,26 @@
     "single": "Single",
     "widowed": "Widowed",
     "divorced": "Divorced",
+    "engaged": "Engaged",
+    "seperated": "Seperated",
+    "grade1": "Grade 1",
+    "grade2": "Grade 2",
+    "grade3": "Grade 3",
+    "grade4": "Grade 4",
+    "grade5": "Grade 5",
+    "grade6": "Grade 6",
+    "grade7": "Grade 7",
+    "grade8": "Grade 8",
+    "grade9": "Grade 9",
+    "grade10": "Grade 10",
+    "grade11": "Grade 11",
+    "grade12": "Grade 12",
+    "graduate": "Graduate",
+    "kg": "KG",
+    "preKg": "Pre-KG",
+    "noGrade": "No Grade",
+    "fullTime": "Full Time",
+    "partTime": "Part Time",
     "selectCountry": "Select a country",
     "enterState": "Enter City or State",
     "joined": "Joined"
