--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -758,6 +758,26 @@
     "married": "Casado",
     "divorced": "Divorciado",
     "widowed": "Viudo",
+    "engaged": "Comprometido(a)",
+    "seperated": "Separado(a)",
+    "grade1": "1er Grado",
+    "grade2": "2do Grado",
+    "grade3": "3er Grado",
+    "grade4": "4to Grado",
+    "grade5": "5to Grado",
+    "grade6": "6to Grado",
+    "grade7": "7mo Grado",
+    "grade8": "8vo Grado",
+    "grade9": "9no Grado",
+    "grade10": "10mo Grado",
+    "grade11": "11vo Grado",
+    "grade12": "12vo Grado",
+    "graduate": "Graduado(a)",
+    "kg": "KG",
+    "preKg": "Pre-KG",
+    "noGrade": "Sin Grado",
+    "fullTime": "Tiempo Completo",
+    "partTime": "Medio Tiempo",
     "enterState": "Ingresar ciudad o estado",
     "selectCountry": "Seleccionar un país",
     "joined": "Unido"
