fix: added the utils/formEnumFields
- Made changes accordingly also ensured no tests were affected.

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -774,8 +774,8 @@
     "married": "Casado",
     "divorced": "Divorciado",
     "widowed": "Viudo",
-    "engaged": "Comprometido(a)",
-    "seperated": "Separado(a)",
+    "engaged": "Comprometido",
+    "seperated": "Separado",
     "grade1": "1er Grado",
     "grade2": "2do Grado",
     "grade3": "3er Grado",
@@ -788,7 +788,7 @@
     "grade10": "10mo Grado",
     "grade11": "11vo Grado",
     "grade12": "12vo Grado",
-    "graduate": "Graduado(a)",
+    "graduate": "Graduado",
     "kg": "KG",
     "preKg": "Pre-KG",
     "noGrade": "Sin Grado",
