remove merge conflict

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -214,7 +214,24 @@
     "searchFullName": "Enter Full Name",
     "people": "People",
     "sort": "Search by Role",
-    "actions": "Actions"
+    "actions": "Actions",
+    "addMembers": "Add Members",
+    "existingUser": "Existing User",
+    "newUser": "New User",
+    "firstName": "First Name",
+    "enterFirstName": "Enter your first name",
+    "lastName": "Last Name",
+    "enterLastName": "Enter your last name",
+    "emailAddress": "Email Address",
+    "enterEmail": "Enter your email address",
+    "password": "Password",
+    "enterPassword": "Enter your password",
+    "confirmPassword": "Confirm Password",
+    "enterConfirmPassword": "Enter your password to confirm",
+    "organization": "Organization",
+    "create": "Create",
+    "cancel": "Cancel",
+    "invalidDetailsMessage": "Please enter valid details."
   },
   "userListCard": {
     "joined": "Joined",
@@ -360,6 +377,27 @@
     "fundArchived": "Fund archived successfully",
     "fundUnarchived": "Fund unarchived successfully",
     "deleteFundMsg": "Do you want to remove this fund?"
+  },
+  "fundCampaign": {
+    "title": "Fundraising Campaigns",
+    "campaignName": "Campaign Name",
+    "startDate": "Start Date",
+    "endDate": "End Date",
+    "campaignOptions": "Options",
+    "fundingGoal": "Funding Goal",
+    "addCampaign": "Add Campaign",
+    "createdCampaign": "Campaign created successfully",
+    "updatedCampaign": "Campaign updated successfully",
+    "deletedCampaign": "Campaign deleted successfully",
+    "deleteCampaignMsg": "Are you sure you want to delete this campaign?",
+    "noCampaigns": "No Campaigns Found",
+    "createCampaign": "Create Fund Campaign",
+    "updateCampaign": "Update Fund Campaign",
+    "deleteCampaign": "Delete Fund Campaign",
+    "no": "No",
+    "yes": "Yes",
+    "currency": "Currency",
+    "selectCurrency": "Select Currency"
   },
   "orgPost": {
     "title": "Talawa Posts",
