--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -183,7 +183,9 @@
     "wesiteLink": "वेबसाइट की लिंक",
     "logo": "प्रतीक चिन्ह",
     "social": "सोशल मीडिया लिंक",
-    "url": "यू आर एल दर्ज करो"
+    "url": "यू आर एल दर्ज करो",
+    "profileChangedMsg": "प्रोफ़ाइल विवरण सफलतापूर्वक अपडेट किया गया।",
+    "resetData": "प्रोफ़ाइल विवरण सफलतापूर्वक रीसेट किया गया।"
   },
   "dashboard": {
     "title": "डैशबोर्ड",
