--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -264,7 +264,6 @@
     "filterByTitle": "Filter by Title",
     "filterByLocation": "Filter by Location",
     "filterByDescription": "Filter by Description",
-    "events": "Events",
     "addEvent": "Add Event",
     "eventDetails": "Event Details",
     "eventTitle": "Title",
@@ -400,7 +399,7 @@
     "selectCurrency": "Select Currency"
   },
   "orgPost": {
-    "title": "Talawa Posts",
+    "title": "Posts",
     "searchPost": "Search Post",
     "posts": "Posts",
     "createPost": "Create Post",
@@ -469,7 +468,7 @@
     "talawaApiUnavailable": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "blockUnblockUser": {
-    "title": "Talawa Block/Unblock User",
+    "title": "Block/Unblock User",
     "pageName": "Block/Unblock",
     "searchByName": "Search By Name",
     "listOfUsers": "List of Users who spammed",
@@ -535,7 +534,7 @@
     "amount": "Amount"
   },
   "orgSettings": {
-    "title": "Talawa Setting",
+    "title": "Settings",
     "pageName": "Settings",
     "general": "General",
     "actionItemCategories": "Action Item Categories",
@@ -794,7 +793,6 @@
   },
   "advertisement": {
     "title": "Advertisements",
-    "pHeading": "Manage Ads",
     "activeAds": "Active Campaigns",
     "archievedAds": "Completed Campaigns",
     "pMessage": "Ads not present for this campaign.",
