--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -278,7 +278,16 @@
     "enterDescrip": "Entrez la description",
     "eventLocation": "Entrez l'emplacement",
     "eventCreated": "Toutes nos félicitations! L'événement est créé.",
-    "talawaApiUnavailable": "Le service Talawa-API n'est pas disponible. Est-il en cours d'exécution ? Vérifiez également votre connectivité réseau."
+    "talawaApiUnavailable": "Le service Talawa-API n'est pas disponible. Est-il en cours d'exécution ? Vérifiez également votre connectivité réseau.",
+    "customRecurrence": "Récurrence personnalisée",
+    "repeatsEvery": "Se répète tous les",
+    "repeatsOn": "Se répète sur",
+    "ends": "Finit",
+    "never": "Jamais",
+    "on": "Sur",
+    "after": "Après",
+    "occurences": "Occurrences",
+    "done": "Fait"
   },
   "organizationActionItems": {
     "actionItemCategory": "Catégorie de l'élément d'action",
