--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -278,7 +278,16 @@
     "enterDescrip": "Introduce la descripción",
     "eventLocation": "Introducir ubicación",
     "eventCreated": "¡Felicidades! Se crea el Evento.",
-    "talawaApiUnavailable": "El servicio Talawa-API no está disponible. ¿Está funcionando? Compruebe también la conectividad de su red."
+    "talawaApiUnavailable": "El servicio Talawa-API no está disponible. ¿Está funcionando? Compruebe también la conectividad de su red.",
+    "customRecurrence": "Recurrencia personalizada",
+    "repeatsEvery": "Se repite cada",
+    "repeatsOn": "Se repite en",
+    "ends": "Finaliza",
+    "never": "Nunca",
+    "on": "En",
+    "after": "Después de",
+    "occurences": "ocurrencias",
+    "done": "Hecho"
   },
   "organizationActionItems": {
     "actionItemCategory": "Categoría del ítem de acción",
