User - People UI - Redesign (#1694)
* User - People UI

* unused lines

* Add userType field to organization member query and update role display in PeopleCard component

* Merge remote-tracking branch 'upstream/develop' into develop

* remove unused imports

* Add userType field to user objects in People.test.tsx

* adding userType for tests

* language fix

* Update MemberDetail.tsx

* Update MemberDetail.tsx

--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -713,9 +713,10 @@
     "allOrganizations": "Todas las organizaciones",
     "joinedOrganizations": "Organizaciones unidas",
     "createdOrganizations": "Organizaciones creadas",
-    "search": "Buscar",
+    "search": "Buscar usuarios",
     "nothingToShow": "Nada que mostrar aquí.",
     "selectOrganization": "Seleccionar organización",
+    "filter": "Filtrar",
     "organizations": "Organizaciones",
     "searchByName": "Buscar por nombre"
   },
