--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -716,9 +716,10 @@
     "allOrganizations": "सभी संगठन",
     "joinedOrganizations": "संगठन शामिल हुए",
     "createdOrganizations": "संगठन बनाये गये",
-    "search": "खोज",
+    "search": "खोज करें",
     "nothingToShow": "यहां दिखाने के लिए कुछ भी नहीं है.",
     "selectOrganization": "संगठन का चयन करें",
+    "filter": "फिल्टर",
     "organizations": "संगठन",
     "searchByName": "नाम से खोजें"
   },
