--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -750,15 +750,66 @@
     "article": "लेख"
   },
   "settings": {
+    "settings": "सेटिंग्स",
     "profileSettings": "पार्श्वचित्र समायोजन",
     "firstName": "पहला नाम",
     "lastName": "उपनाम",
-    "emailAddress": "मेल पता",
-    "updateImage": "छवि अद्यतन करें",
-    "saveChanges": "परिवर्तनों को सुरक्षित करें",
-    "updateProfile": "प्रोफ़ाइल अपडेट करें",
+    "gender": "लिंग",
+    "emailAddress": "ईमेल पता",
+    "phoneNumber": "फोन नंबर",
+    "displayImage": "प्रदर्शन छवि",
+    "chooseFile": "फ़ाइल चुनें",
+    "birthDate": "जन्म तिथि",
+    "grade": "शैक्षिक ग्रेड",
+    "empStatus": "रोजगार की स्थिति",
+    "maritalStatus": "वैवाहिक स्थिति",
+    "address": "पता",
+    "state": "शहर / राज्य",
+    "country": "देश",
+    "resetChanges": "परिवर्तन रीसेट करें",
+    "saveChanges": "परिवर्तन सहेजें",
+    "profileDetails": "प्रोफ़ाइल विवरण",
+    "deleteUserMessage": "उपयोगकर्ता हटाएं बटन पर क्लिक करने से, आपका उपयोगकर्ता, उसकी घटनाओं, टैग्स और सभी संबंधित डेटा के साथ स्थायी रूप से हटा दिया जाएगा।",
+    "copyLink": "प्रोफ़ाइल लिंक कॉपी करें",
+    "deleteUser": "उपयोगकर्ता हटाएं",
     "otherSettings": "अन्य सेटिंग्स",
-    "changeLanguage": "भाषा बदलें"
+    "changeLanguage": "भाषा बदलें",
+    "sgender": "लिंग चुनें",
+    "gradePlaceholder": "ग्रेड दर्ज करें",
+    "sEmpStatus": "रोजगार की स्थिति चुनें",
+    "male": "पुरुष",
+    "female": "महिला",
+    "other": "अन्य",
+    "employed": "नियोजित",
+    "unemployed": "बेरोजगार",
+    "sMaritalStatus": "वैवाहिक स्थिति चुनें",
+    "single": "अविवाहित",
+    "married": "विवाहित",
+    "divorced": "तलाकशुदा",
+    "widowed": "विधवा",
+    "engaged": "सगाईशुदा",
+    "seperated": "अलग",
+    "grade1": "कक्षा 1",
+    "grade2": "कक्षा 2",
+    "grade3": "कक्षा 3",
+    "grade4": "कक्षा 4",
+    "grade5": "कक्षा 5",
+    "grade6": "कक्षा 6",
+    "grade7": "कक्षा 7",
+    "grade8": "कक्षा 8",
+    "grade9": "कक्षा 9",
+    "grade10": "कक्षा 10",
+    "grade11": "कक्षा 11",
+    "grade12": "कक्षा 12 ",
+    "graduate": "स्नातक",
+    "kg": "केजी",
+    "preKg": "प्री-केजी",
+    "noGrade": "कोई ग्रेड नहीं",
+    "fullTime": "पूर्णकालिक",
+    "partTime": "अंशकालिक",
+    "enterState": "शहर या राज्य दर्ज करें",
+    "selectCountry": "देश चुनें",
+    "joined": "शामिल हुआ"
   },
   "donate": {
     "donateTo": "दान दें",
