--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -280,7 +280,7 @@
     "eventCreated": "बधाई हो! इवेंट बनाया गया है।",
     "searchEventName": "ईवेंट नाम खोजें",
     "eventType": "ईवेंट प्रकार",
-    "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
+    "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।",
     "customRecurrence": "कस्टम पुनरावृत्ति",
     "repeatsEvery": "दोहराता है हर",
     "repeatsOn": "को दोहराएगा",
