--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -280,7 +280,7 @@
     "eventCreated": "¡Felicidades! Se crea el Evento.",
     "eventType": "Tipo de evento",
     "searchEventName": "Buscar nombre del evento",
-    "talawaApiUnavailable": "El servicio Talawa-API no está disponible. ¿Está funcionando? Compruebe también la conectividad de su red."
+    "talawaApiUnavailable": "El servicio Talawa-API no está disponible. ¿Está funcionando? Compruebe también la conectividad de su red.",
     "customRecurrence": "Recurrencia personalizada",
     "repeatsEvery": "Se repite cada",
     "repeatsOn": "Se repite en",
