--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -330,7 +330,7 @@
     "eventCreated": "恭喜！事件已創建。",
     "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。",
     "searchEventName": "搜索活动名称",
-    "eventType": "活动类型"
+    "eventType": "活动类型",
     "customRecurrence": "自定义重复",
     "repeatsEvery": "重复每",
     "repeatsOn": "重复于",
