feat: Redesigned Funds Screen for Talawa Admin Portal
- Redesigned the funds screen as per the figma design.
- Except the button to archive/ unarchive funds in the update fund modal I have modified it to switch.
- Ensured create and delete funds are working properly.
- Modified the update handler to update the fundId for the fund.
- Ensured search by fund name also works by adding a new query.
- added a new query for fundbyOrganization to retrieve all the funds also to help to sort by name easily.
- Ensured the page is responsive for all screens.
- Covered all the modified code by tests.

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -359,8 +359,8 @@
     "talawaApiUnavailable": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "funds": {
-    "title": "Talawa Funds",
-    "createFund": "Create",
+    "title": "Funds",
+    "createFund": "Create Fund",
     "fundName": "Fund Name",
     "fundId": "Fund ID",
     "fundOptions": "Opitons",
@@ -377,6 +377,13 @@
     "fundDelete": "Delete Fund",
     "no": "No",
     "yes": "Yes",
+    "manageFund": "Manage Fund",
+    "searchFullName": "Search By Name",
+    "filter": "Filter",
+    "noFundsFound": "No Funds Found",
+    "createdBy": "Created By",
+    "createdOn": "Created On",
+    "status": "Status",
     "archiveFund": "Archive Fund",
     "archiveFundMsg": "On Archiving this fund will remove it from the fund listing.Thisaction can be undone",
     "fundCreated": "Fund created successfully",
