--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -402,6 +402,29 @@
     "currency": "Devise",
     "selectCurrency": "Sélectionnez la devise"
   },
+  "pledges": {
+    "title": "Engagements de campagne de financement",
+    "volunteers": "Bénévoles",
+    "startDate": "Date de début",
+    "endDate": "Date de fin",
+    "pledgeAmount": "Montant de l'engagement",
+    "pledgeOptions": "Options",
+    "pledgeCreated": "Engagement créé avec succès",
+    "pledgeUpdated": "Engagement mis à jour avec succès",
+    "pledgeDeleted": "Engagement supprimé avec succès",
+    "addPledge": "Ajouter un engagement",
+    "createPledge": "Créer un engagement",
+    "currency": "Devise",
+    "selectCurrency": "Sélectionner une devise",
+    "updatePledge": "Mettre à jour l'engagement",
+    "deletePledge": "Supprimer l'engagement",
+    "amount": "Montant",
+    "editPledge": "Modifier l'engagement",
+    "deletePledgeMsg": "Êtes-vous sûr de vouloir supprimer cet engagement?",
+    "no": "Non",
+    "yes": "Oui",
+    "noPledges": "Aucun engagement trouvé"
+  },
   "orgPost": {
     "title": "Talawa Publications",
     "searchPost": "Rechercher une publication",
