Revamp and Modular Event Screen (#1696)
* modular and revamped

* eslint disabled for future use of functions

* funds

* removed unused functions and states

* fix eslint

* EventHeader test cases added

* removed waitfor

* brought back action button

* Update EventCalendar.tsx

* Update EventCalendar.test.tsx

* formatting

* removed viewType from eventcalender

* fixed testcases

* fixes

* code cov

* ..

* add

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -39,6 +39,34 @@
     "numeric_value_check": "Atleaset one numeric value",
     "special_char_check": "Atleast one special character"
   },
+  "funds": {
+    "title": "Talawa Funds",
+    "createFund": "Create",
+    "fundName": "Fund Name",
+    "fundId": "Fund ID",
+    "fundOptions": "Opitons",
+    "noFunds": "No Funds Found",
+    "fundDetails": "Fund Details",
+    "taxDeductible": "Tax Deductible",
+    "enterfundName": "Enter Fund Name",
+    "enterfundId": "Enter Fund ID",
+    "default": "Default Fund",
+    "archived": "Archived",
+    "nonArchive": "Non-Archived",
+    "fundCreate": "Create Fund",
+    "fundUpdate": "Update Fund",
+    "fundDelete": "Delete Fund",
+    "no": "No",
+    "yes": "Yes",
+    "archiveFund": "Archive Fund",
+    "archiveFundMsg": "On Archiving this fund will remove it from the fund listing.Thisaction can be undone",
+    "fundCreated": "Fund created successfully",
+    "fundUpdated": "Fund updated successfully",
+    "fundDeleted": "Fund deleted successfully",
+    "fundArchived": "Fund archived successfully",
+    "fundUnarchived": "Fund unarchived successfully",
+    "deleteFundMsg": "Do you want to remove this fund?"
+  },
   "latestEvents": {
     "eventCardTitle": "Upcoming Events",
     "eventCardSeeAll": "See All",
@@ -192,11 +220,7 @@
     "members": "Members",
     "joinNow": "Join Now",
     "joined": "Joined",
-    "withdraw": "Widthdraw",
-    "orgJoined": "Joined organization successfully",
-    "MembershipRequestSent": "Membership request sent successfully",
-    "AlreadyJoined": "You are already a member of this organization.",
-    "errorOccured": "An error occurred. Please try again later."
+    "withdraw": "Widthdraw"
   },
   "dashboard": {
     "title": "Dashboard",
@@ -278,7 +302,7 @@
     "talawaApiUnavailable": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "organizationEvents": {
-    "title": "Talawa Events",
+    "title": "Events",
     "filterByTitle": "Filter by Title",
     "filterByLocation": "Filter by Location",
     "filterByDescription": "Filter by Description",
@@ -300,6 +324,8 @@
     "enterTitle": "Enter Title",
     "enterDescrip": "Enter Description",
     "eventLocation": "Enter Location",
+    "searchEventName": "Search Event Name",
+    "eventType": "Event Type",
     "eventCreated": "Congratulations! The Event is created.",
     "talawaApiUnavailable": "Talawa-API service is unavailable. Is it running? Check your network connectivity too.",
     "customRecurrence": "Custom Recurrence",
@@ -314,10 +340,7 @@
   },
   "organizationActionItems": {
     "actionItemCategory": "Action Item Category",
-    "actionItemActive": "Action Item Active",
-    "actionItemCompleted": "Action Item Completed",
     "actionItemDetails": "Action Item Details",
-    "actionItemStatus": "Action Item Status",
     "assignee": "Assignee",
     "assigner": "Assigner",
     "assignmentDate": "Assignment Date",
@@ -333,16 +356,13 @@
     "dueDate": "Due Date",
     "earliest": "Earliest",
     "editActionItem": "Edit Action Item",
-    "eventActionItems": "Event Action Items",
     "isCompleted": "Completed",
     "latest": "Latest",
-    "makeActive": "Make Active",
-    "markCompletion": "Mark Completion",
     "no": "No",
     "noActionItems": "No Action Items",
     "options": "Options",
-    "preCompletionNotes": "Notes",
-    "postCompletionNotes": "Completion Notes",
+    "preCompletionNotes": "Pre Completion Notes",
+    "postCompletionNotes": "Post Completion Notes",
     "selectActionItemCategory": "Select an action item category",
     "selectAssignee": "Select an assignee",
     "status": "Status",
@@ -375,34 +395,6 @@
     "eventDeleted": "Event deleted successfully.",
     "eventUpdated": "Event updated successfully.",
     "talawaApiUnavailable": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
-  },
-  "funds": {
-    "title": "Talawa Funds",
-    "createFund": "Create",
-    "fundName": "Fund Name",
-    "fundId": "Fund ID",
-    "fundOptions": "Opitons",
-    "noFunds": "No Funds Found",
-    "fundDetails": "Fund Details",
-    "taxDeductible": "Tax Deductible",
-    "enterfundName": "Enter Fund Name",
-    "enterfundId": "Enter Fund ID",
-    "default": "Default Fund",
-    "archived": "Archived",
-    "nonArchive": "Non-Archived",
-    "fundCreate": "Create Fund",
-    "fundUpdate": "Update Fund",
-    "fundDelete": "Delete Fund",
-    "no": "No",
-    "yes": "Yes",
-    "archiveFund": "Archive Fund",
-    "archiveFundMsg": "On Archiving this fund will remove it from the fund listing.Thisaction can be undone",
-    "fundCreated": "Fund created successfully",
-    "fundUpdated": "Fund updated successfully",
-    "fundDeleted": "Fund deleted successfully",
-    "fundArchived": "Fund archived successfully",
-    "fundUnarchived": "Fund unarchived successfully",
-    "deleteFundMsg": "Do you want to remove this fund?"
   },
   "fundCampaign": {
     "title": "Fundraising Campaigns",
