--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -344,7 +344,7 @@
     "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。"
   },
   "organizationEvents": {
-    "title": "塔拉瓦事件",
+    "title": "活动",
     "filterByTitle": "按標題過濾",
     "filterByLocation": "按位置過濾",
     "filterByDescription": "按描述過濾",
@@ -369,6 +369,8 @@
     "eventLocation": "輸入位置",
     "eventCreated": "恭喜！事件已創建。",
     "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。",
+    "searchEventName": "搜索活动名称",
+    "eventType": "活动类型",
     "customRecurrence": "自定义重复",
     "repeatsEvery": "重复每",
     "repeatsOn": "重复于",
