Feature: Ability to change pre-login imagery (#1649)
* Removed `jest-enzyme` package

* Adding check for

* Added CommunityProfile page

* Added tests for CommunityProfile page

* Fixed formatting errors

* Format fix

* Merge branch 'develop' of https://github.com/git-init-priyanshu/talawa-admin-clone into priyanshu

* Fixed merge conflicts

* Format fix

* Fix typecheck error

* Added language support

* Lint error fix

* Integrated APIs

* Revert changes

* Fixed Failing Test

* FIxed failing  test

* Fixed LoginPage failing tests

* Full code coverage

--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -61,6 +61,7 @@
     "my organizations": "Mes Organisations",
     "users": "Utilisateurs",
     "requests": "Demandes",
+    "communityProfile": "Profil de la communauté",
     "logout": "Déconnexion"
   },
   "leftDrawerOrg": {
@@ -191,6 +192,18 @@
     "MembershipRequestSent": "Demande d'adhésion envoyée avec succès",
     "AlreadyJoined": "Vous êtes déjà membre de cette organisation.",
     "errorOccured": "Une erreur s'est produite. Veuillez réessayer plus tard."
+  },
+  "communityProfile": {
+    "title": "Profil de la communauté",
+    "editProfile": "Editer le profil",
+    "communityProfileInfo": "Ces détails apparaîtront sur l'écran de connexion/inscription pour vous et les membres de votre communauté.",
+    "communityName": "Nom de la communauté",
+    "wesiteLink": "Lien de site Web",
+    "logo": "Logo",
+    "social": "Liens vers les réseaux sociaux",
+    "url": "Entrer l'URL",
+    "profileChangedMsg": "Les détails du profil ont été mis à jour avec succès.",
+    "resetData": "Réinitialisez avec succès les détails du profil."
   },
   "dashboard": {
     "title": "Tableau de bord",
