--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -89,6 +89,7 @@
     "my organizations": "My Organizations",
     "users": "Users",
     "requests": "Requests",
+    "communityProfile": "Community Profile",
     "logout": "Logout"
   },
   "leftDrawerOrg": {
@@ -221,6 +222,18 @@
     "joinNow": "Join Now",
     "joined": "Joined",
     "withdraw": "Widthdraw"
+  },
+  "communityProfile": {
+    "title": "Community Profile",
+    "editProfile": "Edit Profile",
+    "communityProfileInfo": "These details will appear on the login/signup screen for you and your community members",
+    "communityName": "Community Name",
+    "wesiteLink": "Website Link",
+    "logo": "Logo",
+    "social": "Social Media Links",
+    "url": "Enter url",
+    "profileChangedMsg": "Successfully updated the Profile Details.",
+    "resetData": "Successfully reset the Profile Details."
   },
   "dashboard": {
     "title": "Dashboard",
