--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -61,6 +61,7 @@
     "my organizations": "我的组织",
     "users": "用户",
     "requests": "请求",
+    "communityProfile": "社区简介",
     "logout": "退出登录"
   },
   "leftDrawerOrg": {
@@ -263,6 +264,18 @@
     "MembershipRequestSent": "会员申请已成功发送",
     "AlreadyJoined": "您已经是该组织的成员。",
     "errorOccured": "发生错误，请稍后重试。"
+  },
+  "communityProfile": {
+    "title": "社区简介",
+    "editProfile": "编辑个人资料",
+    "communityProfileInfo": "这些详细信息将显示在您和您的社区成员的登录/注册屏幕上",
+    "communityName": "社区名字",
+    "wesiteLink": "网站链接",
+    "logo": "标识",
+    "social": "社交媒体链接",
+    "url": "输入网址",
+    "profileChangedMsg": "已成功更新个人资料详细信息。",
+    "resetData": "成功重置个人资料详细信息。"
   },
   "dashboard": {
     "title": "儀表板",
